# ferry-db

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yaml
include/: IndexedTable.h  IndexedTableDescription.h  IndexedTableSerializable.h
include/core/: manager.h  serializable.h
include/graph/: graph.h  graph_descriptor.h
src/: Ferrydb.cpp  IndexedTable.cpp
src/Private/core/: manager.h  serializable.h
src/Private/graph/: graph.h  graph_descriptor.h
tests/: indexed_table_column_created.cpp  indexed_table_created.cpp  indexed_table_row_column_deletion.cpp  indexed_table_serializer_and_deserializer.cpp  indexed_table_test.cpp  manager_load_save_test.cpp  simple_graph_test.cpp  types_graph_test.cpp
